# persimmon

./: .gitignore  Cargo.toml  Shuttle.toml  index.html  package.json  tailwind.config.js
backend/: Cargo.toml
backend/src/: main.rs
src/: app.rs  main.rs
src/components/: container.rs
