[package]
name = "persimmon-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.14.0"
axum = "0.6.16"
shuttle-axum = "0.14.0"
tokio = "1.27.0"
shuttle-static-folder = "0.14.0"
tower-http = { version = "0.4.0", features = ["fs"] }
